# Assignment-4-Q-2

./: README.md
agents_packaged/: #  .env  README.md  Read.md  pyproject.toml
agents_packaged/src/agents_packaged/: __init__.py  main.py
agents_simple/: README.md  main.py
