[project]
name = "agents-packaged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TahaAkbarCheema", email = "tahaakbar.se@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.11",
]

[project.scripts]
agents-packaged = "agents_packaged.main:run_agent"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
